# friedrichdb

./: CMakeLists.txt  ContributorLicenseAgreement.md  README.md  conanfile.txt
example/: main.cpp
examples/: CMakeLists.txt
examples/base/: CMakeLists.txt  main.cpp
examples/python/: CMakeLists.txt  main.cpp
friedrichdb/: CMakeLists.txt  abstract_database.cpp  composite_key.cpp  database.cpp  object_id.cpp  schema.cpp  storage.cpp  table.cpp  time.cpp  timestamp.cpp  tuple.cpp  tuple_t.cpp
friedrichdb/data_types/: object_id.cpp  timestamp.cpp
friedrichdb/in-memory/: in_memory_database.cpp
friedrichdb/include/friedrichdb/: abstract_database.hpp  abstract_index.hpp  abstract_table.hpp  composite_key.hpp  database.hpp  error.hpp  fake_file_storage.hpp  field_t.hpp  meta_data_t.hpp  object_id.hpp  ordering.h  schema.hpp  table.hpp  time.hpp  tuple.hpp  tuple_t.hpp  type.hpp  view.hpp
friedrichdb/include/friedrichdb/data_types/: object_id.hpp
friedrichdb/include/friedrichdb/index/: unique_hash_index.hpp
friedrichdb/include/friedrichdb/objects/: boolean.hpp
friedrichdb/include/friedrichdb/tuple/: error.hpp  meta_data_t.hpp  object_id.hpp  ordering.h  storage.hpp  time.hpp  timestamp.hpp
friedrichdb/include/friedrichdb/view/: double_tt.hpp  object_id.hpp
header/friedrichdb/: abstract_collection.hpp  abstract_database.hpp  abstract_index.hpp  abstract_table.hpp  composite_key.h  composite_key.hpp  controller.hpp  database.hpp  document.hpp  fake_file_storage.hpp  field_t.hpp  forward.h  journal.hpp  meta_data_t.hpp  operation.hpp  output.hpp  pool.hpp  query.hpp  schema.hpp  serializable.hpp  storage.hpp  transaction.hpp  transaction_t.hpp  tuple_t.hpp  type.hpp
header/friedrichdb/core/: basic_field.hpp  buffer.hpp  classical_resource.hpp  collection.hpp  composite_key.h  database.hpp  dict.hpp  dict.ipp  document.hpp  field.hpp  field_base.hpp  flat_field.hpp  join.hpp  memory_resource.hpp  number.hpp  options.hpp  schema.hpp  table.hpp  type.hpp
header/friedrichdb/data_types/: abstract_data_type.hpp  field_t.hpp  object.hpp  object_id.hpp  time.hpp  timestamp.hpp  tuple_t.hpp  type.hpp  view_t.hpp
header/friedrichdb/document/: document.hpp  field.hpp
header/friedrichdb/functions/: forward.hpp  join.hpp  update.hpp
header/friedrichdb/in-memory/: composite_key.h  database.hpp  document.hpp  in_memory_collection.hpp  in_memory_database.hpp  in_memory_table.hpp  part_manager.hpp  table.hpp
header/friedrichdb/index/: hash_index.hpp
header/friedrichdb/objects/: object_id.hpp  positive_integer.hpp  view_t.hpp
header/friedrichdb/old/: abstract_collection.hpp  abstract_database.hpp  controller.hpp  database.hpp  fake_file_storage.hpp  forward.h  journal.hpp  operation.hpp  query_scheduler.hpp
header/friedrichdb/ql/: parser.hpp
header/friedrichdb/shared_memory/: document.hpp  json.hpp  node_allocator.hpp  shm.hpp  table.hpp
integration/python/: CMakeLists.txt  main.cpp
integration/python/db/: db.py  errors.py  queries.py  results.py  utils.py
integration/python/tests/: test_database.py  test_tables.py  test_utils.py
integration/python/wrapper/: convert.cpp  convert.hpp  wrapper_client.cpp  wrapper_client.hpp  wrapper_collection.cpp  wrapper_collection.hpp  wrapper_database.cpp  wrapper_database.hpp  wrapper_document.hpp
source/core/: dict.cpp
source/friedrichdb/core/: collection.cpp  database.cpp  dict.cpp  document.cpp
sourcer/: abstract_collection.cpp  abstract_database.cpp  abstract_index.cpp  composite_key.cpp  controller.cpp  database.cpp  document.cpp  fake_file_storage.cpp  field_t.cpp  operation.cpp  query.cpp  schema.cpp  storage.cpp  transaction.cpp  tuple_t.cpp  type.cpp
sourcer/data_types/: object_id.cpp  time.cpp
sourcer/in-memory/: in_memory_collection.cpp  in_memory_database.cpp  in_memory_table.cpp  table.cpp
test/: CMakeLists.txt
test/collection/: CMakeLists.txt  main.cpp
test/field/: CMakeLists.txt  main.cpp
test/memory_database/: CMakeLists.txt  main.cpp
test/shm/: CMakeLists.txt  main.cpp
